Microsoft logo added and green icons styled.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="user-icon"></div>
     </header>
     <main>
+        <img class="microsoft-logo" src="/images/microsoft-logo.svg" alt="">
         <div class="hero">
             <img src="/images/dead-island-hero.jpg" alt="Dead Island 2">
             <div class="hero-content">
@@ -30,23 +31,23 @@
                 <span>GAME PASS</span>
             </div>
             <div class="icon">
-                <img src="" alt="games">
+                <img src="/images/games.svg" alt="games">
                 <span>GAMES</span>
             </div>
             <div class="icon">
-                <img src="" alt="consoles">
+                <img src="/images/consoles.svg" alt="consoles">
                 <span>CONSOLES</span>
             </div>
             <div class="icon">
-                <img src="" alt="accessories">
+                <img src="/images/accessories.svg" alt="accessories">
                 <span>ACCESSORIES</span>
             </div>
             <div class="icon">
-                <img src="" alt="play">
+                <img src="/images/play.svg" alt="play">
                 <span>PLAY</span>
             </div>
             <div class="icon">
-                <img src="" alt="sign in">
+                <img src="/images/sign-in.svg" alt="sign in">
                 <span>SIGN IN</span>
             </div>
         </div>
