html and css done for cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="menu-button"><span class="menu-line"></span><span class="menu-line"></span><span class="menu-line"></span></div>
         <div class="xbox-logo"><img src="/images/xbox-logo.svg" alt="Xbox Logo"></div>
         <div class="cart"><img src="/images/shopping-cart.svg" alt="shopping cart"></div>
-        <div class="user-icon"></div>
+        <div class="user-icon">
+            <img src="/images/person-circle.svg" alt="icon of person">
+        </div>
     </header>
     <main>
         <img class="microsoft-logo" src="/images/microsoft-logo.svg" alt="">
@@ -52,11 +54,45 @@
             </div>
         </div>
         <div class="card">
-            <img src="" alt="Minecraft Legends">
+            <img src="/images/minecraft-legends.jpg" alt="Minecraft Legends">
             <div class="card-content">
+                <span class="yellow-banner">CONSOLE · PC · CLOUD</span>
                 <h2>Minecraft Legends</h2>
                 <p>Play now with Xbox Game Pass or purchase</p>
                 <a href="">GET IT NOW ></a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/game-pass-image.jpg" alt="Selection of Game pass games">
+            <div class="card-content alt-image-content">
+                <h2>Discover your next favourite game</h2>
+                <p>Play hundreds of high-quality games with friends on console, PC, phones and tablets.</p>
+                <a href="">JOIN NOW ></a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/controller.jpg" alt="Xbox Controller">
+            <div class="card-content">
+                <h2>Xbox Elite Series 2, your way</h2>
+                <p>Customise the Xbox Elite Wireless Controller Series 2 with Xbox Design Lab.</p>
+                <a href="">DESIGN YOURS ></a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/cod.jpg" alt="Call of Duty">
+            <div class="card-content alt-image-content">
+                <span class="yellow-banner">NEW SEASON</span>
+                <h2>Call of Duty®: Modern Warfare II</h2>
+                <p>Play Season 03 now and join the fight on more MP maps and modes.</p>
+                <a href="">GET IT NOW ></a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/images/eso.jpg" alt="Elder Scrolls Online">
+            <div class="card-content alt-image-content">
+                <h2>The Elder Scrolls Online: Necrom</h2>
+                <p>Return to Morrowind and wield magic as the new Arcanist class</p>
+                <a href="">PRE-ORDER NOW ></a>
             </div>
         </div>
     </main>
