footer mobile design complete

--- a/index.html
+++ b/index.html
@@ -95,8 +95,34 @@
                 <a href="">PRE-ORDER NOW ></a>
             </div>
         </div>
+        <ul class="socials">
+            <li>Follow Xbox</li>
+            <li><img src="/images/email-icon.svg" alt="email"></li>
+            <li><img src="/images/fb-icon.svg" alt="facebook"></li>
+            <li><img src="/images/twitter-icon.svg" alt="twitter"></li>
+            <li><img src="/images/instagram-icon.svg" alt="instagram"></li>
+        </ul>
     </main>
     <footer>
+        <nav>
+            <div class="nav-section">
+                <h3>Browse</h3>
+                <a href="">Xbox consoles</a>
+                <a href="">Xbox games</a>
+                <a href>Xbox Game pass
+                </a>
+                <a href="">Xbox accessories</a>
+            </div>
+            <div class="nav-section">
+                <h3>For Developers</h3>
+                <a href="">Games</a>
+                <a href="">ID@Xbox</a>
+                <a href>Windows
+                </a>
+                <a href="">Creators Program</a>
+            </div>
+
+    </nav>
       <a href="">English(United Kingdom)</a>
       <ul class="footer-links" role="list">
         <li><a href="">Contact Microsoft</a></li>
