icon list is now responsive

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header>
         <div class="menu-button"><span class="menu-line"></span><span class="menu-line"></span><span class="menu-line"></span></div>
         <div class="xbox-logo"><img src="/images/xbox-logo.svg" alt="Xbox Logo"></div>
-        <div class="cart"><img src="/images/shopping-cart.svg" alt="shopping cart"></div>
-        <div class="user-icon">
-            <img src="/images/person-circle.svg" alt="icon of person">
+        <div class="cart-user-icon">
+            <div class="cart"><img src="/images/shopping-cart.svg" alt="shopping cart"></div>
+            <div class="user-icon">
+                <img src="/images/person-circle.svg" alt="icon of person">
+            </div>
         </div>
     </header>
     <main>
